fixes for shadow on IE (from Kris Leite, CLA on file)
git-svn-id: http://svn.dojotoolkit.org/src@3254 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/html/shadowIE.css
+++ b/trunk/src/html/shadowIE.css
@@ -4,6 +4,7 @@
 	left: -8px;
 	width: 8px;
 	height: 8px;
+	line-height: 0px;
 }
 .dojoShadowTR{
 	position: absolute;
@@ -11,6 +12,7 @@
 	right: -6px;
 	width: 8px;
 	height: 8px;
+	line-height: 0px;
 }
 .dojoShadowBL{
 	position: absolute;
@@ -18,6 +20,7 @@
 	left: -8px;
 	width: 8px;
 	height: 8px;
+	line-height: 0px;
 }
 .dojoShadowBR{
 	position: absolute;
@@ -25,6 +28,7 @@
 	right: -6px;
 	width: 8px;
 	height: 8px;
+	line-height: 0px;
 }
 
 .dojoShadowT{
@@ -33,6 +37,7 @@
 	left: 0px;
 	width: 100%;
 	height: 8px;
+	line-height: 0px;
 }
 
 .dojoShadowB{
@@ -41,6 +46,7 @@
 	left: 0px;
 	width: 100%;
 	height: 8px;
+	line-height: 0px;
 }
 .dojoShadowL{
 	position: absolute;
@@ -48,11 +54,14 @@
 	left: -8px;
 	width: 8px;
 	height: 100%;
+	line-height: 0px;
 }
+
 .dojoShadowR{
 	position: absolute;
 	top: 0px;
 	right: -6px;
 	width: 8px;
 	height: 100%;
+	line-height: 0px;
 }
